--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <div class="scheme-frame">
       <p>Schematic of our robot will be placed here.</p>
       <!-- Add image like this when ready -->
-      <img src="./Our Robotics Team_files/PRO.png" alt="Robot Schematic">
+      <img src=".PRO.png" alt="Robot Schematic">
     </div>
   </section>
 
