--- a/index.html
+++ b/index.html
@@ -170,31 +170,31 @@
     <h2>Components Used</h2>
     <div class="components-grid">
       <div class="component">
-        <img src="Arduino_Nano_-_R3.jpg" alt="Arduino Nano">
+        <img src="nano.jpg" alt="Arduino Nano">
         <p>Arduino Nano</p>
       </div>
       <div class="component">
-        <img src="GP2Y0A21YK0F-IR-range-sensor.jpg" alt="Sharp Sensor">
+        <img src="Sharp.png" alt="Sharp Sensor">
         <p>Sharp IR Sensor ×3</p>
       </div>
       <div class="component">
-        <img src="servo-motor.png" alt="Servo Motor">
+        <img src="Servo.png" alt="Servo Motor">
         <p>Servo Motor</p>
       </div>
       <div class="component">
-        <img src="tt-motor-yellow-1-1.jpg" alt="TT Motor">
+        <img src="TTmotor.png" alt="TT Motor">
         <p>TT Motor</p>
       </div>
       <div class="component">
-        <img src="TB6612-800x800.jpg" alt="Motor Driver">
+        <img src="TB6612FNG.png" alt="Motor Driver">
         <p>TB6612FNG Motor Driver</p>
       </div>
       <div class="component">
-        <img src="lipo-battery-500x500.jpg" alt="Battery">
+        <img src="Battery.png" alt="Battery">
         <p>11.1V Li-Po Battery</p>
       </div>
       <div class="component">
-        <img src="7805-Voltage-Regulator.jpg" alt="Voltage Regulator">
+        <img src="Vregulator.png" alt="Voltage Regulator">
         <p>Voltage Regulator</p>
       </div>
       <div class="component">
