--- a/index.html
+++ b/index.html
@@ -123,6 +123,34 @@
       border-radius: 10px;
     }
 
+    /* Gallery Grid */
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .frame {
+      background: #fff;
+      padding: 10px;
+      border: 3px solid #00bcd4;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+    }
+
+    .frame:hover {
+      transform: scale(1.05);
+    }
+
+    .frame img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 8px;
+    }
+
     /* Footer */
     footer {
       background: #222;
@@ -144,6 +172,7 @@
         <li><a href="#components">Components</a></li>
         <li><a href="#design">3D Design</a></li>
         <li><a href="#scheme">Schematic</a></li>
+        <li><a href="#gallery">Gallery</a></li>
         <li><a href="#team">Team</a></li>
       </ul>
     </nav>
@@ -170,7 +199,7 @@
     <h2>Components Used</h2>
     <div class="components-grid">
       <div class="component">
-        <img src="nano.jpg" alt="Arduino Nano">
+        <img src="nano.png" alt="Arduino Nano">
         <p>Arduino Nano</p>
       </div>
       <div class="component">
@@ -197,10 +226,6 @@
         <img src="Vregulator.png" alt="Voltage Regulator">
         <p>Voltage Regulator</p>
       </div>
-      <div class="component">
-        <img src="0f95a0e5e8a5a37e63dbdf7cf9e0bcd9_preview_featured.jpg" alt="3D Printed Skeleton">
-        <p>3D Printed Skeleton</p>
-      </div>
     </div>
   </section>
 
@@ -216,6 +241,28 @@
     <div class="scheme-frame">
       <p>Schematic of our robot:</p>
       <img src="PRO.png" alt="Robot Schematic">
+    </div>
+  </section>
+
+  <!-- Gallery Section -->
+  <section id="gallery" class="section">
+    <h2>Project Gallery</h2>
+    <div class="gallery-grid">
+      <div class="frame">
+        <img src="frame1.png" alt="Frame 1">
+      </div>
+      <div class="frame">
+        <img src="frame2.png" alt="Frame 2">
+      </div>
+      <div class="frame">
+        <img src="frame3.png" alt="Frame 3">
+      </div>
+      <div class="frame">
+        <img src="frame4.png" alt="Frame 4">
+      </div>
+      <div class="frame">
+        <img src="frame5.png" alt="Frame 5">
+      </div>
     </div>
   </section>
 
