--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth; /* Smooth scroll */
+      scroll-behavior: smooth;
     }
 
     body {
@@ -118,8 +118,8 @@
     }
 
     .scheme-frame img {
-      max-width: 600px; /* şəkil enini məhdudlaşdırır */
-      height: auto;     /* nisbəti qoruyur */
+      max-width: 600px;
+      height: auto;
       border-radius: 10px;
     }
 
@@ -134,7 +134,7 @@
     .frame {
       background: #fff;
       padding: 10px;
-      border: 3px solid #00bcd4;
+      border: 3px solid #00bcd4; /* Ramka xətti */
       border-radius: 12px;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       transition: transform 0.3s;
